# huffman-archiver

./: .clang-format  .clang-tidy  .gitignore  BitReader_8cpp.html  BitReader_8cpp__incl.map  BitReader_8cpp__incl.md5  BitReader_8hpp.html  BitReader_8hpp.js  BitReader_8hpp__dep__incl.map  BitReader_8hpp__dep__incl.md5  BitReader_8hpp__incl.map  BitReader_8hpp__incl.md5  BitReader_8hpp_source.html  BitWriter_8cpp.html  BitWriter_8cpp__incl.map  BitWriter_8cpp__incl.md5  BitWriter_8hpp.html  BitWriter_8hpp.js  BitWriter_8hpp__dep__incl.map  BitWriter_8hpp__dep__incl.md5  BitWriter_8hpp__incl.map  BitWriter_8hpp__incl.md5  BitWriter_8hpp_source.html  Bits_8cpp.html  Bits_8cpp__incl.map  Bits_8cpp__incl.md5  Bits_8hpp.html  Bits_8hpp.js  Bits_8hpp__dep__incl.map  Bits_8hpp__dep__incl.md5  Bits_8hpp__incl.map  Bits_8hpp__incl.md5  Bits_8hpp_source.html  CMakeLists.txt  CodesTable_8cpp.html  CodesTable_8cpp__incl.map  CodesTable_8cpp__incl.md5  CodesTable_8hpp.html  CodesTable_8hpp.js  CodesTable_8hpp__dep__incl.map  (+196 more)
.github/.workflows/: build-lint-test.yml
.github/workflows/: build-lint-test-sanz-doc.yml  build-lint-test.yml  build-sanitize-test.yml  generate-docs.yml  lint.yml
app/: app.cpp  app.hpp  main.cpp
docs/: REFLECTION.md
include/huffman/: archive.hpp  unarchive.hpp
research/: benchmark_results.csv  main.py  pyproject.toml  report.tex
search/: all_0.js  all_1.js  all_10.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+4 more)
src/: BitReader.cpp  BitReader.hpp  BitWriter.cpp  BitWriter.hpp  Bits.cpp  Bits.hpp  CodesTable.cpp  CodesTable.hpp  CountTable.hpp  archive.cpp  unarchive.cpp
tests/: CMakeLists.txt  test_BitReader.cpp  test_BitWriter.cpp  test_Bits.cpp  test_CodesTable.cpp  test_archive.cpp  test_integration.cpp  test_unarchive.cpp
